<resources>
    <string name="app_name">零食售卖</string>
    <string name="error_tip">好像出错了</string>
    <string name="delect">删除</string>
    <string name="isSure">你认真的吗？</string>

    <!--  第一次打开app 的界面  launchActivity  -->
    <string name="administrator">我是管理员</string>
    <string name="user">我来买买买</string>
    <string name="goToAdministrator">进入管理员</string>
    <string name="goToUser">进入买买买</string>

    <!-- 登录注册界面   LoginActivity ResigistActivity  -->
    <string name="admin_login">管理员登录</string>
    <string name="resigist_admin">注册管理员</string>
    <string name="admin_name">用户名:</string>
    <string name="admin_name_tip">请输入用户名</string>
    <string name="admin_number">手机号:</string>
    <string name="admin_number_tip">请输入手机号</string>
    <string name="admin_email">邮箱:</string>
    <string name="admin_email_tip">请输入邮箱</string>
    <string name="password">密码:</string>
    <string name="password_tip">请输入密码</string>
    <string name="submit">提交</string>
    <string name="resigist_jump">加入我们？注册</string>
    <string name="admin_sure_psw">确定密码:</string>
    <string name="admin_sure_psw_hint">请重新输入密码</string>
    <string name="login_in">进入登录界面</string>
    <string name="verification_code_number">获取验证码</string>
    <string name="sure_pwd_password">输入的密码不一样</string>
    <string name="register_success">注册成功，请等待管理员同意</string>

    <!--  管理员界面   AdminActivity -->
    <string name="admin_title">尊敬的管理员</string>
    <string name="admin_activity">活动管理</string>
    <string name="admin_goods">商品管理</string>
    <string name="admin_customer_advise">客户意见</string>
    <string name="admin_good_sum">零食销售统计</string>
    <string name="admin_control_admin">管理管理员</string>
    <string name="admin_change_Pwd">修改密码</string>
    <string name="admin_about_me">关于我们</string>
    <string name="admin_go_to_buy">进入买买买</string>
    <string name="admin_login_out">退出登录</string>

    <!-- 活动管理 -->
    <string name="activities_one_tip">活动一：</string>
    <string name="activities_two_tip">活动二：</string>
    <string name="activities_three_tip">活动三：</string>
    <string name="instruction_tip">说明:(最多20个字)</string>
    <string name="sure">确定</string>
    <string name="cancle">取消</string>
    <string name="add">添加</string>

    <!--  用户的我的界面  -->
    <string name="user_advise">建议意见</string>
    <string name="user_record">购买记录</string>
    <string name="user_to_admin">登录管理员</string>

    <!--  商品管理界面  -->
    <string name="good_name">商品名称:</string>
    <string name="good_name_tip">请输入商品名称</string>
    <string name="good_number">商品数量:</string>
    <string name="good_number_tip">请输入商品数量</string>
    <string name="production_date">生产日期:</string>
    <string name="production_date_tip">请输入生产日期</string>
    <string name="good_content">商品说明:(少于60字)</string>
    <string name="good_content_tip">请输入商品说明</string>
    <string name="good_price">商品价格:</string>
    <string name="good_price_tip">请输入商品价格</string>
    <string name="good_photo">商品图片</string>
    <string name="good_photo_tip">请选择商品图片</string>
    <string name="add_good">添加商品</string>
    <string name="change_good">修改商品信息</string>

    <!-- 管理管理员的界面 -->
    <string name="add_management">申请成为管理员</string>
    <string name="delect_management">删除管理员</string>

    <!-- 关于我们 -->
    <string name="check_upData">检查新版本</string>
    <string name="is_new">已经是最新版本</string>
</resources>
