<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f0f0f0"
    android:orientation="vertical">

    <include layout="@layout/include_bar" />

    <!-- 商品图片  -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#fff">

        <me.panpf.sketch.SketchImageView
            android:id="@+id/good_photo"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_centerInParent="true"
            android:layout_margin="8dp"
            android:src="@mipmap/ic_launch" />
    </RelativeLayout>

    <!--  商品名称  -->
    <LinearLayout
        style="@style/m_w"
        android:layout_marginTop="1dp"
        android:background="#fff"
        android:orientation="horizontal"
        android:padding="8dp">

        <TextView
            style="@style/resigist_text"
            android:text="@string/good_name" />

        <EditText
            android:id="@+id/good_name"
            style="@style/resigist_edit"
            android:hint="@string/good_name_tip"
            android:inputType="text" />

    </LinearLayout>
    <!--  生产日期  -->
    <LinearLayout
        style="@style/m_w"
        android:layout_marginTop="1dp"
        android:background="#fff"
        android:orientation="horizontal"
        android:padding="8dp">

        <TextView
            style="@style/resigist_text"
            android:text="@string/production_date" />

        <EditText
            android:id="@+id/production_date"
            style="@style/resigist_edit"
            android:hint="@string/production_date_tip"
            android:inputType="text" />

    </LinearLayout>
    <!--  商品价格  -->
    <LinearLayout
        style="@style/m_w"
        android:layout_marginTop="1dp"
        android:background="#fff"
        android:orientation="horizontal"
        android:padding="8dp">

        <TextView
            style="@style/resigist_text"
            android:text="@string/good_price" />

        <EditText
            android:id="@+id/good_price"
            style="@style/resigist_edit"
            android:hint="@string/good_price_tip"
            android:inputType="text" />

    </LinearLayout>
    <!--  商品数量  -->
    <LinearLayout
        style="@style/m_w"
        android:layout_marginTop="1dp"
        android:background="#fff"
        android:orientation="horizontal"
        android:padding="8dp">

        <TextView
            style="@style/resigist_text"
            android:text="@string/good_number" />

        <EditText
            android:id="@+id/good_number"
            style="@style/resigist_edit"
            android:hint="@string/good_number_tip"
            android:inputType="text" />

    </LinearLayout>
    <!--  商品说明  -->
    <LinearLayout
        style="@style/m_w"
        android:layout_marginTop="1dp"
        android:background="#fff"
        android:orientation="vertical"
        android:padding="8dp">

        <TextView
            style="@style/resigist_text"
            android:layout_width="200dp"
            android:text="@string/good_content" />

        <EditText
            android:id="@+id/good_content"
            style="@style/resigist_edit"
            android:layout_width="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="3dp"
            android:gravity="top|left"
            android:hint="@string/good_content_tip"
            android:inputType="text|textMultiLine"
            android:maxLength="60"
            android:minHeight="100dp"
            />

    </LinearLayout>

    <Button
        android:id="@+id/submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="70dp"
        android:layout_marginRight="70dp"
        android:layout_marginTop="20dp"
        android:background="@color/black"
        android:text="@string/submit"
        android:textColor="#fff"
        android:textSize="18sp" />

</LinearLayout>