<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/include_bar" />

    <!--  用户名  -->
    <LinearLayout
        style="@style/m_w"
        android:layout_marginTop="100dp"
        android:padding="10dp">

        <TextView
            android:id="@+id/name_tip"
            style="@style/resigist_text"
            android:text="@string/admin_name" />

        <EditText
            android:id="@+id/name"
            style="@style/resigist_edit"
            android:hint="@string/admin_name_tip"
            android:inputType="text" />

    </LinearLayout>

    <!--  密码  -->
    <LinearLayout
        style="@style/m_w"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:id="@+id/password_name"
            style="@style/resigist_text"
            android:text="@string/password" />

        <EditText
            android:id="@+id/password"
            style="@style/resigist_edit"
            android:hint="@string/password_tip"
            android:inputType="textPassword" />

    </LinearLayout>

    <Button
        android:id="@+id/submit"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="70dp"
        android:layout_marginRight="70dp"
        android:onClick="loginIn"
        android:text="@string/submit" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:padding="10dp"
        android:onClick="jumpToResigist"
        android:text="@string/resigist_jump" />

</LinearLayout>