<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f0f0f0"
    android:orientation="vertical">


    <!-- 提意见 -->
    <RelativeLayout
        android:id="@+id/user_advise"
        style="@style/admin_control_relative">

        <TextView
            style="@style/admin_control_text"
            android:text="@string/user_advise" />

        <ImageView
            style="@style/admin_control_image"
            android:src="@mipmap/right_icon" />

    </RelativeLayout>
    <!-- 购买记录 -->
    <RelativeLayout
        android:id="@+id/user_recode"
        style="@style/admin_control_relative">

        <TextView
            style="@style/admin_control_text"
            android:text="@string/user_record" />

        <ImageView
            style="@style/admin_control_image"
            android:src="@mipmap/right_icon" />

    </RelativeLayout>
    <!-- 登录管理员 -->
    <RelativeLayout
        android:id="@+id/user_to_admin"
        style="@style/admin_control_relative">

        <TextView
            style="@style/admin_control_text"
            android:text="@string/user_to_admin" />

        <ImageView
            style="@style/admin_control_image"
            android:src="@mipmap/right_icon" />

    </RelativeLayout>


</LinearLayout>